--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dist/main.css">
-    <title>Minesweeper</title>
+    <title>{{name}}</title>
 </head>
 <body>
-    <h1>There is Minesweeper field</h1>
-    <button id="randomField">Random Field</button>
-    <p id="outputParagraph">Temponary Sign</p>
+    <div id="app"></div>
     <!-- <script src="minesweeper.js"></script> -->
     <script src="dist/bundle.js"></script>
 </body>
